# fastAPI_template

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  run.py
app/: app.py  models.py
app/handlers/: descriptions.py  models.py  router.py
app/handlers/routes/: base_route.py
settings/: .env.example  config.py
tests/: conftest.py
tests/app/: test_app.py
